var hierarchy =
[
    [ "cogip::pf::actuators::Actuator", "classcogip_1_1pf_1_1actuators_1_1Actuator.html", [
      [ "cogip::pf::actuators::positional_actuators::PositionalActuator", "classcogip_1_1pf_1_1actuators_1_1positional__actuators_1_1PositionalActuator.html", [
        [ "cogip::pf::actuators::positional_actuators::Motor", "classcogip_1_1pf_1_1actuators_1_1positional__actuators_1_1Motor.html", null ],
        [ "cogip::pf::actuators::positional_actuators::OnOff", "classcogip_1_1pf_1_1actuators_1_1positional__actuators_1_1OnOff.html", null ]
      ] ]
    ] ],
    [ "cogip::motion_control::BaseController", "classcogip_1_1motion__control_1_1BaseController.html", [
      [ "cogip::motion_control::BaseMetaController", "classcogip_1_1motion__control_1_1BaseMetaController.html", [
        [ "cogip::motion_control::MetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
        [ "cogip::motion_control::ParallelMetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", null ],
        [ "cogip::motion_control::MetaController< 11, 3, 2 >", "classcogip_1_1motion__control_1_1MetaController.html", [
          [ "cogip::motion_control::QuadPIDMetaController", "classcogip_1_1motion__control_1_1QuadPIDMetaController.html", null ]
        ] ],
        [ "cogip::motion_control::MetaController< 5, 2, 4 >", "classcogip_1_1motion__control_1_1MetaController.html", [
          [ "cogip::motion_control::DualPIDMetaController", "classcogip_1_1motion__control_1_1DualPIDMetaController.html", null ]
        ] ],
        [ "cogip::motion_control::ParallelMetaController< 9, 3, polar_parallel_meta_controller_nb_controllers >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", [
          [ "cogip::motion_control::PolarParallelMetaController", "classcogip_1_1motion__control_1_1PolarParallelMetaController.html", null ]
        ] ]
      ] ],
      [ "cogip::motion_control::Controller< INPUT_SIZE, OUTPUT_SIZE, ParamsT >", "classcogip_1_1motion__control_1_1Controller.html", null ],
      [ "cogip::motion_control::Controller< 11, 9, PoseStraightFilterParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::PoseStraightFilter", "classcogip_1_1motion__control_1_1PoseStraightFilter.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< 2, 2, SpeedPIDControllerParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::SpeedPIDController", "classcogip_1_1motion__control_1_1SpeedPIDController.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< 5, 2, SpeedFilterParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::SpeedFilter", "classcogip_1_1motion__control_1_1SpeedFilter.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< 5, 5, MotorPoseFilterParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::MotorPoseFilter", "classcogip_1_1motion__control_1_1MotorPoseFilter.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< 5, 5, PassthroughPosePIDControllerParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::PassthroughPosePIDController", "classcogip_1_1motion__control_1_1PassthroughPosePIDController.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< 5, 5, PosePIDControllerParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::PosePIDController", "classcogip_1_1motion__control_1_1PosePIDController.html", null ]
      ] ],
      [ "cogip::motion_control::Controller< INPUT_SIZE, OUTPUT_SIZE, MetaControllerParameters >", "classcogip_1_1motion__control_1_1Controller.html", [
        [ "cogip::motion_control::MetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
        [ "cogip::motion_control::ParallelMetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", null ],
        [ "cogip::motion_control::MetaController< 11, 3, 2 >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
        [ "cogip::motion_control::MetaController< 5, 2, 4 >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
        [ "cogip::motion_control::ParallelMetaController< 9, 3, polar_parallel_meta_controller_nb_controllers >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", null ]
      ] ]
    ] ],
    [ "cogip::motion_control::BaseControllerEngine", "classcogip_1_1motion__control_1_1BaseControllerEngine.html", [
      [ "cogip::motion_control::MotorEngine", "classcogip_1_1motion__control_1_1MotorEngine.html", null ],
      [ "cogip::motion_control::PlatformEngine", "classcogip_1_1motion__control_1_1PlatformEngine.html", null ]
    ] ],
    [ "cogip::canpb::CanProtobuf", "classcogip_1_1canpb_1_1CanProtobuf.html", null ],
    [ "cogip::cogip_defs::Coords", "classcogip_1_1cogip__defs_1_1Coords.html", [
      [ "cogip::cogip_defs::Pose", "classcogip_1_1cogip__defs_1_1Pose.html", [
        [ "cogip::path::Pose", "classcogip_1_1path_1_1Pose.html", null ]
      ] ]
    ] ],
    [ "deque", null, [
      [ "cogip::motion_control::MetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
      [ "cogip::motion_control::ParallelMetaController< INPUT_SIZE, OUTPUT_SIZE, NB_CONTROLLERS >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", null ],
      [ "cogip::motion_control::MetaController< 11, 3, 2 >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
      [ "cogip::motion_control::MetaController< 5, 2, 4 >", "classcogip_1_1motion__control_1_1MetaController.html", null ],
      [ "cogip::motion_control::ParallelMetaController< 9, 3, polar_parallel_meta_controller_nb_controllers >", "classcogip_1_1motion__control_1_1ParallelMetaController.html", null ]
    ] ],
    [ "cogip::drive_controller::DifferentialDriveControllerParameters", "classcogip_1_1drive__controller_1_1DifferentialDriveControllerParameters.html", null ],
    [ "cogip::drive_controller::DriveControllerInterface", "classcogip_1_1drive__controller_1_1DriveControllerInterface.html", [
      [ "cogip::drive_controller::DifferentialDriveController", "classcogip_1_1drive__controller_1_1DifferentialDriveController.html", null ]
    ] ],
    [ "cogip::encoder::EncoderInterface", "classcogip_1_1encoder_1_1EncoderInterface.html", [
      [ "cogip::encoder::EncoderQDEC", "classcogip_1_1encoder_1_1EncoderQDEC.html", null ]
    ] ],
    [ "cogip::sysmon::MemoryStatus", "classcogip_1_1sysmon_1_1MemoryStatus.html", [
      [ "cogip::sysmon::ThreadStatus", "classcogip_1_1sysmon_1_1ThreadStatus.html", null ]
    ] ],
    [ "cogip::motion_control::MetaControllerParameters", "classcogip_1_1motion__control_1_1MetaControllerParameters.html", null ],
    [ "cogip::motor::MotorDriverInterface", "classcogip_1_1motor_1_1MotorDriverInterface.html", [
      [ "cogip::motor::MotorDriverRIOT", "classcogip_1_1motor_1_1MotorDriverRIOT.html", [
        [ "cogip::motor::MotorDriverDRV8873", "classcogip_1_1motor_1_1MotorDriverDRV8873.html", null ]
      ] ]
    ] ],
    [ "cogip::motor::MotorInterface", "classcogip_1_1motor_1_1MotorInterface.html", [
      [ "cogip::motor::MotorRIOT", "classcogip_1_1motor_1_1MotorRIOT.html", null ]
    ] ],
    [ "cogip::motion_control::MotorPoseFilterParameters", "classcogip_1_1motion__control_1_1MotorPoseFilterParameters.html", null ],
    [ "cogip::odometer::OdometerDifferentialParameters", "classcogip_1_1odometer_1_1OdometerDifferentialParameters.html", null ],
    [ "cogip::odometer::OdometerInterface", "classcogip_1_1odometer_1_1OdometerInterface.html", [
      [ "cogip::odometer::OdometerDifferential", "classcogip_1_1odometer_1_1OdometerDifferential.html", null ]
    ] ],
    [ "cogip::motion_control::PassthroughPosePIDControllerParameters", "classcogip_1_1motion__control_1_1PassthroughPosePIDControllerParameters.html", null ],
    [ "cogip::pid::PID", "classcogip_1_1pid_1_1PID.html", null ],
    [ "cogip::cogip_defs::Polar", "classcogip_1_1cogip__defs_1_1Polar.html", null ],
    [ "cogip::motion_control::PosePIDControllerParameters", "classcogip_1_1motion__control_1_1PosePIDControllerParameters.html", null ],
    [ "cogip::motion_control::PoseStraightFilterParameters", "classcogip_1_1motion__control_1_1PoseStraightFilterParameters.html", null ],
    [ "ReadBufferInterface", null, [
      [ "cogip::canpb::ReadBuffer", "classcogip_1_1canpb_1_1ReadBuffer.html", null ]
    ] ],
    [ "cogip::pf::sensors::Sensor", "classcogip_1_1pf_1_1sensors_1_1Sensor.html", [
      [ "cogip::pf::sensors::bool_sensors::BoolSensor", "classcogip_1_1pf_1_1sensors_1_1bool__sensors_1_1BoolSensor.html", null ]
    ] ],
    [ "cogip::motion_control::SpeedFilterParameters", "classcogip_1_1motion__control_1_1SpeedFilterParameters.html", null ],
    [ "cogip::motion_control::SpeedPIDControllerParameters", "classcogip_1_1motion__control_1_1SpeedPIDControllerParameters.html", null ],
    [ "sysmon_heap_t", "structsysmon__heap__t.html", null ],
    [ "vector", null, [
      [ "cogip::cogip_defs::Polygon< N >", "classcogip_1_1cogip__defs_1_1Polygon.html", null ]
    ] ],
    [ "cogip::wizard::Wizard", "classcogip_1_1wizard_1_1Wizard.html", null ],
    [ "WriteBufferInterface", null, [
      [ "cogip::canpb::WriteBuffer", "classcogip_1_1canpb_1_1WriteBuffer.html", null ]
    ] ]
];